[package]
name = "ctask"
version = "0.1.1"
edition = "2021"
description = "A simple task list"
author = "wc7086 <190022474@qq.com>"
license = "GPL-3.0"
repository = "https://github.com/wc7086/ctask"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27.0"
dialoguer = "0.11.0"
rand = "0.8"
chrono = "0.4.34"
directories = "5.0.1"
clap = { version = "4.5.1", features = ["derive"] }

[profile.release]
lto = true
